feat(Kafka Engine): Kafka Engine is receiving messages